implemeneted appuser, auditlog, and client subscription api routes and tests
